# cryptutil

./: ChangeLog  README  configure  configure.ac  index.html
src/: Makefile.am  Makefile.in  config.h.in  cryptutil.c  libcryptutil.h  main.c
